<resources>
    <string name="app_name">WeCheat</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="action_trick">搞事</string>
    <string name="wechat_package_name">com.tencent.mm</string>
    <string name="auto_reply_description">WeCheat需要cheat的权限</string>

    <string name="tbt_status_action_on">点击服务</string>
    <string name="tbt_status_action_off">点击服务</string>
    <string name="tbt_status_shuttle_on">通信服务</string>
    <string name="tbt_status_shuttle_off">通信服务</string>
    <string name="tbt_status_notify_on">通知服务</string>
    <string name="tbt_status_notify_off">通知服务</string>
    <string name="tbt_status_auto_on">辅助服务</string>
    <string name="tbt_status_auto_off">辅助服务</string>


    <string name="tbt_action_thread_running">发送服务运行中</string>
    <string name="tbt_action_thread_pending">发送服务未启动</string>
    <string name="tbt_net_thread_running">网络服务运行中</string>
    <string name="tbt_net_thread_pending">网络服务未启动</string>
    <string name="title_activity_settings">Settings</string>
    <string name="url_official_website">https://github.com/hui-z/WeCheatApp</string>
    <string name="title_activity_about">关于</string>

    <!-- Strings related to Settings -->
    <!--setting-->
    <string name="setting_title_server_url">接口地址</string>
    <string name="setting_default_server_url">部署WeCheat服务server的baseUrl</string>
    <string name="hint_server_url">like: http://www.lets-cheat.com</string>

    <string name="setting_title_security_key">加密密钥</string>
    <string name="setting_default_security_key">用于加密的密钥，必须为8位（目前）</string>
    <string name="hint_security_key">like: AAAA0000</string>

    <string name="setting_title_signature_key">签名密钥</string>
    <string name="setting_default_signature_key">用于消息签名的密钥</string>
    <string name="hint_signature_key">like: zaihui-lakala</string>
    <string name="title_activity_trick">我想搞点事情</string>


</resources>
