<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="http://localhost"
        android:hint="@string/hint_server_url"
        android:inputType="textUri"
        android:key="serverUrl"
        android:summary="@string/setting_default_server_url"
        android:title="@string/setting_title_server_url" />
    <EditTextPreference
        android:defaultValue="12345678"
        android:hint="@string/hint_security_key"
        android:inputType="text"
        android:key="securityKey"
        android:summary="@string/setting_default_security_key"
        android:title="@string/setting_title_security_key" />
    <EditTextPreference
        android:defaultValue="12345678"
        android:hint="@string/hint_signature_key"
        android:inputType="text"
        android:key="signatureKey"
        android:summary="@string/setting_default_signature_key"
        android:title="@string/setting_title_signature_key" />

</PreferenceScreen>