<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context="me.eagzzycsl.wecheat.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/tbt_status_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/toggle_service_color"
                android:textOff="@string/tbt_status_action_off"
                android:textOn="@string/tbt_status_action_on" />

            <ToggleButton
                android:id="@+id/tbt_status_shuttle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/toggle_service_color"
                android:textOff="@string/tbt_status_shuttle_off"
                android:textOn="@string/tbt_status_shuttle_on" />

            <ToggleButton
                android:id="@+id/tbt_status_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/toggle_service_color"
                android:textOff="@string/tbt_status_notify_off"
                android:textOn="@string/tbt_status_notify_on" />

            <ToggleButton
                android:id="@+id/tbt_status_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/toggle_service_color"
                android:textOff="@string/tbt_status_auto_off"
                android:textOn="@string/tbt_status_auto_on" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"

            android:text="日志"
            android:textAppearance="@android:style/TextAppearance.WindowTitle"
            android:textColor="@color/colorAccent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="app已启动" />
        </ScrollView>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_power_settings_white" />

</android.support.design.widget.CoordinatorLayout>
